kubernetes/apps/default/forgejo-runner/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-runner
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/managed-by: forgejo-runner
  enableDefaultDeny:
    ingress: true
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - protocol: TCP
              port: "3000"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo-runner
      toPorts:
        - ports:
            - protocol: TCP
              port: "38809"
            - protocol: TCP
              port: "8088"
            - protocol: TCP
              port: "8089"
    - toCIDRSet:
        - cidrGroupRef: internet
      toPorts:
        - ports:
            - protocol: TCP
              port: "80"
            - protocol: TCP
              port: "443"
